CB-102 add commerce evaluation views
